<resources>
    <string name="app_name">CovidNews</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="countries">Countries</string>
    <string name="statistics">Statistics</string>
    <string name="news">News</string>
    <string name="lorem_ipsum">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero\'s De Finibus Bonorum et Malorum for use in a type specimen book.</string>
    <string name="settings">Settings</string>
    <string name="detailed_info">Detailed Info</string>
    <string name="night_mode">Night Mode</string>

</resources>