<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/statisticsFragment">

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="ev.aykhan.covid.ui.fragment.statistics.StatisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/newsFragment"
        android:name="ev.aykhan.covid.ui.fragment.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news">
        <action
            android:id="@+id/action_newsFragment_to_detailedNewsFragment"
            app:destination="@id/detailedNewsFragment" />
    </fragment>
    <fragment
        android:id="@+id/countriesFragment"
        android:name="ev.aykhan.covid.ui.fragment.countries.CountriesFragment"
        android:label="@string/countries"
        tools:layout="@layout/fragment_countries" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="ev.aykhan.covid.ui.fragment.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/detailedNewsFragment"
        android:name="ev.aykhan.covid.ui.fragment.detailedNews.DetailedNewsFragment"
        android:label="@string/detailed_info"
        tools:layout="@layout/fragment_detailed_news">
        <argument
            android:name="newsDetails"
            app:argType="ev.aykhan.covid.model.parcelable.NewsParcelable" />
    </fragment>

</navigation>