<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ev.aykhan.covid.ui.activity.main.MainActivity">

    <item
        android:id="@+id/countriesFragment"
        android:icon="@drawable/ic_baseline_account_balance_24"
        android:title="@string/countries"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/statisticsFragment"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/statistics"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/newsFragment"
        android:icon="@drawable/ic_baseline_new_releases_24"
        android:title="@string/news"
        app:showAsAction="ifRoom" />

</menu>